# docc

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  Dockerfile  Dockerfile.prod  Quick Start Guide.yml  README.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_api.py  test_config.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  main.py
backend/api/: routes.py  system_check.py
backend/core/: config.py  script_generator.py  tts_manager.py
backend/integrations/: ai_provider.py  claude_provider.py  elevenlabs_provider.py  openai_ai_provider.py  openai_tts_provider.py  opencode_provider.py  tts_provider.py
backend/models/: errors.py  script.py  tts.py
backend/prompts/: repository_analyzer.md
backend/tests/: conftest.py  test_api_routes.py  test_claude_provider.py  test_cli.py  test_elevenlabs_provider.py  test_openai_provider.py  test_openai_tts_provider.py  test_opencode_provider.py  test_script_generator.py  test_system_check.py  test_tts_manager.py
cli/: main.py
frontend/: .eslintrc.json.backup  eslint.config.mts  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx
frontend/src/common/: env.ts
frontend/src/components/: CodeRenderer.css  CodeRenderer.tsx  ErrorScreen.tsx  Loading.tsx  MainApp.css  MainApp.tsx  SystemCheck.tsx  TextRenderer.css  TextRenderer.tsx  VideoPlayer.css  VideoPlayer.tsx
frontend/src/components/SystemCheck/: ErrorScreen.tsx  Loading.tsx  ServiceStatus.tsx
frontend/src/components/ui/: TitleH1.tsx  TitleH2.tsx  input.tsx  progress.tsx  textarea.tsx
frontend/src/hooks/: useAudioControls.ts  useAutoPlay.ts  useSystemCheck.ts  useVideoPlayer.ts
frontend/src/services/: api.ts  audioService.ts
frontend/src/styles/: globals.css
frontend/src/types/: script.ts  system-check.ts
scripts/: dev.sh  test.sh
shared/: file_utils.py
